tests/int/use_command/snapshots/integration__int__use_command__depth__modules_advanced_globs_depth_d_3.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - advanced_globs
    - "-d"
    - "3"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::internal::*
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
