tests/int/use_command/snapshots/integration__int__use_command__depth__modules_advanced_globs_depth_e_G.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - advanced_globs
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::internal::internal_a
crate::advanced_globs::internal::internal_b
crate::advanced_globs::internal::internal_c
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
