tests/int/use_command/snapshots/integration__int__use_command__depth__modules_advanced_globs_depth_r_e_d_1.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - advanced_globs
    - "-r"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs
crate::dir_module
crate::file_module
crate::visibility

----- stderr -----
