tests/int/use_command/snapshots/integration__int__use_command__depth__modules_glob_patterns_depth_d_3.snap
---
source: tests/int/use_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - glob_patterns
    - "-d"
    - "3"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module
crate::file_module
crate::glob_patterns::self_ref::*

----- stderr -----
